[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "webley"
version = "1.1.0.dev"
description = ""
readme = "README.md"
license = "MIT"
classifiers = []
requires-python = ">=3.10"

[project.urls]
Source = "https://github.com/DevByEagle/webley"

[tool.mypy]
exclude = "build"
show_error_codes = true
pretty = true
strict = true
