[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "webley"
description = ""
version = "1.1.0.dev"
readme = "README.md"
license = "MIT"
maintainers = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
#Documentation = ""
#Changes = ""
Source = "https://github.com/devbyeagle/webley/"
Tracker = "https://github.com/devbyeagle/webley/issues"

[project.scripts]

[tool.mypy]
python_version = "3.10"
files = ["webley"]
show_error_codes = true
pretty = true
strict = true